<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.InitialFragment">

    <TextView
        android:id="@+id/game_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/trivia_game"
        android:textSize="42sp"
        android:layout_margin="16dp"
        android:textColor="@color/dark_green"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/game_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/game_name"
        android:text="@string/test_your_knowledge_of_different_types_of_categories"
        android:textSize="22sp"
        android:layout_margin="16dp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/game_information"
        app:layout_constraintBottom_toTopOf="@id/amount_edit_text"
        app:lottie_rawRes="@raw/quest"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amount_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number_of_questions"
        android:textSize="16sp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:layout_margin="8dp"
        android:focusedByDefault="true"
        android:textColorHint="@color/dark_green"
        tools:ignore="UnusedAttribute"
        android:inputType="number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintBottom_toTopOf="@id/category_edit_text"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/category_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category_type"
        android:textSize="16sp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:layout_margin="8dp"
        android:focusedByDefault="true"
        android:textColorHint="@color/dark_green"
        tools:ignore="UnusedAttribute"
        android:keyboardNavigationCluster="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="@id/amount_edit_text"
        app:layout_constraintBottom_toTopOf="@id/spinner">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="48dp"
        app:placeholderText="easy"
        app:placeholderTextColor="@color/dark_green"
        app:layout_constraintBottom_toTopOf="@id/start_button"
        app:layout_constraintStart_toStartOf="@id/amount_edit_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">
        <AutoCompleteTextView
            android:id="@+id/set_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/start_button"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginVertical="32dp"
        android:text="@string/start_game"
        android:textStyle="bold"
        android:textSize="24sp"
        android:theme="@style/Button.color"
        android:background="@drawable/text_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>